[tool.poetry]
name = "pheromone-field"
version = "0.1.0"
description = ""
authors = ["masashi <masashi.lateolabrax@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "2.1.0"
scipy = "1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
